# RN-VS

./: README.md  client.c  clientvaleria.c  github.xml  peers.sh  selectserver.c  server.c  servervaleria.c  vcs.xml
Block2/: clientvaleria.c  server.c  servervaleria.c
Block3/: CMakeLists.txt  client.c  library.h  server.c
Block4/: communicationfuncs4.h  communicationsfuncs4_moritz_debug.c  hashtablefuncs4.h  peers.sh  selectserver.c  selectserver_moritz_debug.c  server.c  structs.h  todo.txt  uthash.h
Block4-Samuel/: CMakeLists.txt  peer.c  protocol.c  protocol.h  todo.txt
Block4-Samuel/Abgabe/: CMakeLists.txt  peer.c  protocol.c
Block4-Samuel/pics/: exampleCall.txt
Block5/: CMakeLists.txt  README.md  client.c  server.c  todo.txt
Block5/include/: fingertable.h  lookup.h  message.h  sockUtils.h
Block5/src/: fingertable.c  join.c  lookup.c  message.c  packet.c  sockUtils.c
Block6/: README.txt  client.c  todo.txt
Block6/include/: protocol.h  sockUtils.h
Block6/src/: protocol.c  sockUtils.c
